fix layout-breakpoint tests in Cypresss (#690)
* fix layout-breakpoint tests in Cypresss

* update CHANGELOG

Co-authored-by: Amit Zur <amit.zur@applitools.com>
Co-authored-by: Sophie De Paula <sophie24587@gamil.com>

--- a/packages/eyes-cypress/test/fixtures/breakpoints.html
+++ b/packages/eyes-cypress/test/fixtures/breakpoints.html
@@ -68,9 +68,10 @@
       <script>
         setTimeout(() => {
           var img = document.createElement('img')
+          img.id = 'smurfs-img'
           img.src = './smurfs.jpg'
           document.body.appendChild(img)
-        }, 3000) 
+        }, 1000);
       </script>
     </body>
     </html>
