Fix google font cache (#700)
* test for google font fetching with user agent

* fix google font cache

* [auto commit] @applitools/visual-grid-client: upgrade deps

* [auto commit] @applitools/visual-grid-client: upgrade deps

* fix tests and createStreamingPromise returned value

* update CHANGELOG files

* fix additional tests and calculate cachKey in setUrl

Co-authored-by: Amit Zur <amit.zur@applitools.com>
Co-authored-by: Sophie De Paula <sophie24587@gamil.com>

--- a/packages/visual-grid-client/test/fixtures/google-fonts-icon.html
+++ b/packages/visual-grid-client/test/fixtures/google-fonts-icon.html
@@ -1,6 +1,7 @@
 <html>
 	<body>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined|Material+Icons+Round" />
+		<p>Test google fonts with user agent</p>
 		<span class="material-icons-round">error</span>
 		<span class="material-icons-round">warning</span>
 		<span class="material-icons-round">check_circle</span>
